feat: add crud cars
