# models/cars.go
@@ -5,7 +5,8 @@ import "time"
 type Cars struct {
 	ID        uint      `json:"id" gorm:"primaryKey;autoIncrement"`
 	Name      string    `json:"name"`
-	DailyRent string    `json:"daily_rent"`
+	Stock     uint      `json:"stock"`
+	DailyRent uint      `json:"daily_rent"`
 	CreatedAt time.Time `json:"created_at" gorm:"autoCreateTime"`
 	UpdatedAt time.Time `json:"updated_at" gorm:"autoUpdateTime"`
 }
